--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,5 @@ html, body { height: 100%; }
 body { margin: 0; 
       /* font-family: Roboto, "Helvetica Neue", sans-serif;  */
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      background: #dff2fa;}
+      background: #e3f3fa;}
 
