alterações na estrutura de login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
       <img [src]="logoImg" alt="Logo Atlética Fatec Ipiranga" />
     
           <h1>Bem vindo potrinho!</h1>
-          <h3>Para escolher seu padrinho/madrinha, digite seu código abaixo:</h3>
+          <h2>Para escolher seu padrinho ou madrinha, digite seu código abaixo:</h2>
           <form (ngSubmit)="onSubmit()">
                 <mat-form-field class="input-code-size" appearance="outline">
                   <mat-label>Insira o código</mat-label>
