--- a/src/app/padrinho-card/padrinho-card.component.html
+++ b/src/app/padrinho-card/padrinho-card.component.html
@@ -6,7 +6,7 @@
             <mat-card-header>
               <div mat-card-avatar class="example-header-image"></div>
               <mat-card-title>{{padrinhos[i].nome}}</mat-card-title>
-              <mat-card-subtitle>{{padrinhos[i].curso}}/ {{padrinhos[i].perioso}}</mat-card-subtitle>
+              <mat-card-subtitle>{{padrinhos[i].curso}}/ {{padrinhos[i].periodo}}</mat-card-subtitle>
             </mat-card-header>
             <img [src]="padrinhos[i].foto" alt="Padrinho/madrinha">
             <mat-card-content >       
@@ -15,11 +15,11 @@
                 <p><b>Frase: </b>{{padrinhos[i].frase}}</p>    
             </mat-card-content>
             <mat-card-actions>
-              <button mat-raised-button (click)="openDialog(i)" class="remove-text-on-hover">
+              <button mat-raised-button (click)="openDialog(i)">
                 ESCOLHER
                 <mat-icon color="warn">favorite</mat-icon>
               </button>
-        
+
             </mat-card-actions>
           </mat-card>    
         </form>      
