Função para inserirchave de afilhados dentro do padrinho em escolha

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,8 @@
   <img [src]="logoImg" alt="Logo Atlética Fatec Ipiranga" />
 
   <h1>Bem vindo potrinho!</h1>
-  <h2>Para escolher seu padrinho ou madrinha, digite seu código abaixo:</h2>
+  <p>Para escolher seu padrinho ou madrinha, </p>
+  <p>digite seu código abaixo:</p>
 
   <form (ngSubmit)="onLogin()">
 
