--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,58 +1,66 @@
-
-
-main{
+main {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       width: 100vw;
       height: 100vh;
-     
+
 }
 
-span{
+span {
       padding: .8rem;
 }
 
 
-.input-code-size{
+.input-code-size {
       text-align: center;
       align-items: center;
 }
 
-form{
-display: flex;
-flex-direction: column;
+form {
+      display: flex;
+      flex-direction: column;
+      margin-top: 1rem;
 }
-mat-error{
+
+mat-error {
       font-size: .9rem;
       margin-top: .4rem;
 }
-button{
+
+button {
       width: 8vw;
       margin-top: .6rem;
       align-self: center;
 }
 
-h1{
+h1 {
       color: blue;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      font-size: 2rem;
+      font-size: 1.8rem;
 }
 
-h2{
-      color:rgb(255, 10, 2);
+p {
+      color: rgb(138, 6, 247);
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
 
 }
 
-img{
+img {
       border-radius: 10rem;
       /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
       box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-      
+
       margin-bottom: 1rem;
 }
 
+@media (max-width: 500px) {
+      p {
+            font-size: 1rem;
+            margin: 0;
 
+      }
+
+}
