--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -1,4 +1,5 @@
-<h1 class="title-dialog" mat-dialog-title>Confirmação</h1>
+<main>
+  <h1 class="title-dialog" mat-dialog-title>Confirmação</h1>
 <div class="text-dialog" mat-dialog-content>
   Você só tem uma chance de escolher.
   Tem certeza que deseja continuar com <strong>{{data.padrinhos[data.index].nome}}</strong>?
@@ -7,3 +8,4 @@
   <button class="no" mat-button (click)="onNoClick()">Não</button>
   <button class="yes" mat-button [mat-dialog-close]="data.index" cdkFocusInitial>Sim</button>
 </div>
+</main>
