--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -1,8 +1,8 @@
 <main>
-  <h1 class="title-dialog" mat-dialog-title>Confirmação</h1>
+<h1 class="title-dialog" mat-dialog-title>Confirmação</h1>
 <div class="text-dialog" mat-dialog-content>
   Você só tem uma chance de escolher.
-  Tem certeza que deseja continuar com <strong>{{data.padrinhos[data.index].nome}}</strong>?
+  Tem certeza que deseja continuar ??
 </div>
 <div mat-dialog-actions>
   <button class="no" mat-button (click)="onNoClick()">Não</button>
