--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -2,7 +2,7 @@
 <h1 class="title-dialog" mat-dialog-title>Confirmação</h1>
 <div class="text-dialog" mat-dialog-content>
   Você só tem uma chance de escolher.
-  Tem certeza que deseja continuar ??
+  Tem certeza que deseja selecionar <strong>{{data.padrinhos.nome}}</strong> ??
 </div>
 <div mat-dialog-actions>
   <button class="no" mat-button (click)="onNoClick()">Não</button>
