--- a/src/app/padrinho-card/padrinho-card.component.html
+++ b/src/app/padrinho-card/padrinho-card.component.html
@@ -1,29 +1,29 @@
 <main>
 
   <h1>Salve <strong>{{firstName}}</strong>, essas são suas opções: </h1>
-      
+
         <form>
           <mat-card class="card-padrinho" *ngFor="let padrinho of padrinhos; let i = index">
             <mat-card-header>
               <div mat-card-avatar class="example-header-image"></div>
 
-              <mat-card-title>{{padrinhos[i].nome}}</mat-card-title>
-              <mat-card-subtitle>{{padrinhos[i].curso}}/ {{padrinhos[i].periodo}}</mat-card-subtitle>
+              <mat-card-title>{{padrinho.nome}}</mat-card-title>
+              <mat-card-subtitle>{{padrinho.curso}}/ {{padrinho.periodo}}</mat-card-subtitle>
             </mat-card-header>
-            <img [src]="padrinhos[i].foto" alt="Padrinho/madrinha">
-            <mat-card-content >       
-                <p><b>Idade: </b>{{padrinhos[i].Idade}}</p>
-                <p><b>Hobbie: </b>{{padrinhos[i].hobbie}}</p>
-                <p><b>Frase: </b>{{padrinhos[i].frase}}</p>    
+            <img [src]="padrinho.foto" alt="Padrinho/madrinha">
+            <mat-card-content >
+                <p><b>Idade: </b>{{padrinho.Idade}}</p>
+                <p><b>Hobbie: </b>{{padrinho.hobbie}}</p>
+                <p><b>Frase: </b>{{padrinho.frase}}</p>
             </mat-card-content>
             <mat-card-actions>
-              <button mat-raised-button (click)="openDialog(padrinhos[i].code)">
+              <button mat-raised-button (click)="openDialog(padrinho.code)">
                 ESCOLHER
                 <mat-icon color="warn">favorite</mat-icon>
               </button>
 
             </mat-card-actions>
-          </mat-card>    
-        </form>      
-         
-    </main>    
+          </mat-card>
+        </form>
+
+    </main>
