--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -1,11 +1,13 @@
 <main>
-<h1 class="title-dialog" mat-dialog-title>Confirmação</h1>
-<div class="text-dialog" mat-dialog-content>
-  Você só tem uma chance de escolher.
-  Tem certeza que deseja selecionar <strong>{{data.padrinhos.nome}}</strong> ??
-</div>
-<div mat-dialog-actions>
-  <button class="no" mat-button (click)="onNoClick()">Não</button>
-  <button class="yes" mat-button [mat-dialog-close]="data.index" cdkFocusInitial>Sim</button>
-</div>
+  <div class="container">
+    <h1 class="title-dialog" mat-dialog-title>Confirmação</h1>
+    <div class="text-dialog" mat-dialog-content>
+      Você só tem uma chance de escolher.
+      Tem certeza que deseja selecionar <strong>{{data.padrinhos.nome}}</strong> ??
+    </div>
+    <div mat-dialog-actions>
+      <button class="no" mat-button (click)="onNoClick()">Não</button>
+      <button class="yes" mat-button [mat-dialog-close]="data.index" cdkFocusInitial>Sim</button>
+    </div>
+  </div>
 </main>
