--- a/src/app/final/final.component.html
+++ b/src/app/final/final.component.html
@@ -2,7 +2,7 @@
       <img [src]="logoImg" alt="Logo Atlética Fatec Ipiranga" />
     
       <h1>POTRINHO, VALEU PELA PARTICIPAÇÃO!!!</h1>
-      <p>Aguarde os próximos passos da dinâmica</p>
+      <p>Aguarde os próximos passos da dinâmica.</p>
       <p>GO DARK HORSE!</p>     
     
 </main>
